[tool.black]
line-length = 88

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "image_segmenter"
version = "1.0.0"
description = "A tool that can be used to apply image segmentation."
readme = "README.md"
authors = [
    { name = "Frank Mayet", email = "frank.mayet@desy.de" }
]
dependencies = [
    "numpy",
    "matplotlib",
]

[tool.setuptools]
packages = ["image_segmenter"]