[tool.black]
line-length = 88

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "image_segmentation"
version = "1.0.0"
description = "A tool that can be used to apply image segmentation."
readme = "README.md"
authors = [
    { name = "Dimitrii Tomin", email = "dimitrii.tomin@gmail.com" }
]
dependencies = [
    "numpy",
    "matplotlib",
    "scipy"
]

[tool.setuptools]
packages = ["image_segmentation"]
